--- a/css/style.css
+++ b/css/style.css
@@ -5,161 +5,195 @@
  */
 
 /* Global Styles */
-    .fly {
-           display: block;
-        position: relative;
-        /* width:20%;   bootstrap div classes in the html currently handle the positioning, no longer using this default code*/
-        /*margin: 0px auto;bootstrap div classes in the html currently handle the positioning, no longer using this default code*/
-        height: 40px;
-        /*padding: 10px;bootstrap div classes in the html currently handle the positioning, no longer using this default code*/
-        border: none;
-        border-radius: 3px;
-        font-size: 12px;
-        text-align: center;
-        color: #fff;
-        background: #ee8a65;
-    }
+.fly {
+  display: block;
+  position: relative;
+  /* width:20%;   bootstrap div classes in the html currently handle the positioning, no longer using this default code*/
+  /*margin: 0px auto;bootstrap div classes in the html currently handle the positioning, no longer using this default code*/
+  height: 40px;
+  /*padding: 10px;bootstrap div classes in the html currently handle the positioning, no longer using this default code*/
+  border: none;
+  border-radius: 3px;
+  font-size: 12px;
+  text-align: center;
+  color: #fff;
+  background: #ee8a65;
+}
 
 #bootstrapoverrides {
   position: absolute;
-  height:100%;
+  height: 100%;
   width: 100%;
-  margin:0px;
-  padding:0;
-  font-family: 'Lato', sans-serif;
-  color:#606060;
-      background-color:#E8E8E8;
-    /*font-family: ""Source Sans Pro","Helvetica Neue",Helvetica,Arial,sans-serif";*/
+  margin: 0px;
+  padding: 0;
+  font-family: "Lato", sans-serif;
+  color: #606060;
+  background-color: #e8e8e8;
+  /*font-family: ""Source Sans Pro","Helvetica Neue",Helvetica,Arial,sans-serif";*/
 }
 
-
-#bootstrapoverrides .container-fluid {
-  padding-right:0px;
-  padding-left:0px;
-}
-#bootstrapoverrides .row-fluid {
-  padding-right:0px;
-  padding-left:0px;
+.row {
+  display: flex;
+  justify-content: center;
+  height: 100vh;
 }
 
-#bootstrapoverrides .row {
-  padding-right:0px;
-  padding-left:0px;
+#contactinfo2 {
+  position: absolute;
+  padding: 30px;
+  top: 20vh;
+  width: auto;
+  margin-left: 5vw;
+  margin-right: 5vw;
 }
 
+#clickthis {
+    position:absolute;
+    top: 80vh;
+}
 
+#clickthis > a {
+    color: white;
+}
+
+#contactinfo2 > div > * {
+  width: auto;
+  text-align: center;
+}
 
 #singlepage {
-    padding: 5vh 0px;
-    border-top: solid 2px;
-    border-bottom: solid 2px;
-    background-color: white;
-    min-height: 100vh;
-    /* margin-bottom:10vh;   */
+  padding: 5vh 0px;
+  border-top: solid 2px;
+  background-color: white;
+  /* margin-bottom:10vh;   */
 }
 
-#singlepage #myTabContent {
-    padding-top:5vh;
+#myTabContent {
+  background-color:white;
+  width:100vw;
+  height: 100vh;
+  padding-left: 0px;
+  padding-right: 0px;
 }
 
-#singlepage .nav-tabs>li>a {
-    border:none;
-    color: #a4a6a9;
+#home {
+    background-color:white;
 }
 
+#myTabContent h4 {
+    background-color:white;
+    padding-left:30px;
+    padding-right:30px;
+
+}
+
+
+#singlepage .nav-tabs > li > a {
+  border: none;
+  color: #a4a6a9;
+}
+
+.nav-item {
+    text-align: center;
+}
 
 #singlepage #myTab {
-    border-bottom:none;
-    font-size:200%;
+  border-bottom: none;
+  font-size: 200%;
+  display: flex;
+  justify-content: center;
 }
 
-#singlepage .nav-tabs>li.active>a, 
-#singlepage .nav-tabs>li.active>a:focus, 
-#singlepage .nav-tabs>li.active>a:hover {
-    border:none;
-    color: #333;
+#singlepage .nav-tabs > li.active > a,
+#singlepage .nav-tabs > li.active > a:focus,
+#singlepage .nav-tabs > li.active > a:hover {
+  border: none;
+  color: #333;
 }
 
+#singlepage .nav-tabs > li > a:hover {
+  border-color: none;
+}
 
-
-#singlepage .nav-tabs>li>a:hover {border-color:none;}
-
-#singlepage .nav>li>a:focus, 
-#singlepage .nav>li>a:hover {
-    background: none;
+#singlepage .nav > li > a:focus,
+#singlepage .nav > li > a:hover {
+  background: none;
 }
 
 #singlepage li.active {
-    /* font-size: larger; */
-    border:none;
-    border-bottom: solid 1px black;
+  /* font-size: larger; */
+  border: none;
+  border-bottom: solid 1px black;
 }
 
 #profile > .col-lg-4.col-xs-6 {
-    margin-bottom:30px;
+  margin-bottom: 30px;
 }
 
-.no-gutter > [class*='col-'] {
-    padding-right:0;
-    padding-left:0;
+.no-gutter > [class*="col-"] {
+  padding-right: 0;
+  padding-left: 0;
 }
 
 .text-vertical-center {
-    text-align: center;
-    vertical-align: middle;
+  text-align: center;
+  vertical-align: middle;
 }
 
 .vcenter {
-    display: inline-block;
-    vertical-align: middle;
-    float: none;
+  display: inline-block;
+  vertical-align: middle;
+  float: none;
 }
 
 .nowrap {
-    white-space: nowrap;
-    overflow: hidden;
+  white-space: nowrap;
+  overflow: hidden;
 }
 
 #enter > a > h5 {
-    margin:0px;  /*this vertically-aligns the "Click to Enter" text in the middle of the orange button*/
+  margin: 0px; /*this vertically-aligns the "Click to Enter" text in the middle of the orange button*/
 }
 
 #navigation {
-    background-color:red;
-    position:fixed;
-    z-index: 1;
+  background-color: red;
+  position: fixed;
+  z-index: 1;
 }
 
 #contactinfo > div.wow.fadeInLeft > h1 {
-    font-size:3.5em;
+  font-size: 3.5em;
 }
 
 .infobox {
-  background-color:rgba(255,255,255,.7);
+  background-color: rgba(255, 255, 255, 0.9);
   border-style: solid;
-  border-width:2px;
-  border-color:#606060;
+  border-width: 2px;
+  border-color: #606060;
 }
 
 #contactinfo {
-    margin:200px auto 20px;
-    padding: 30px 10px;
-    max-width: 50vw;
+  margin: 200px auto 20px; /*top horizontal bottom*/
+  padding: 30px 10px; /*horizontal vertical*/
+}
+
+#contactinfo > div {
+  width: auto;
+  margin-left: 20px;
+  margin-right: 20px;
 }
 
 #mainnavcontent {
-    padding-top:50px;
-    height:auto;
-    min-height:800px;
-    padding-bottom:50px;
-    margin-bottom:25px;
-    background-color:rgba(255,255,255,.8);
+  padding-top: 50px;
+  height: auto;
+  min-height: 800px;
+  padding-bottom: 50px;
+  margin-bottom: 25px;
+  background-color: rgba(255, 255, 255, 0.8);
 }
 
-
-
 #contactinfofooter {
-  margin-bottom:500px;
+    margin: 100px;
 }
 
 /*the unique styling to get the "Click to Learn More" Circle around the double-down arrow
@@ -177,229 +211,209 @@
     background: 0 0;
 }*/
 
-
-
 /* Social Media Buttons */
 .grow {
-transition: all .1s ease-in-out; }
-.grow:hover {
-transform: scale(1.3);
+  transition: all 0.1s ease-in-out;
 }
-.social-fb, .social-tw, .social-gp, .social-em, .social-rm, .social-sk, .social-st {
-color: #606060;
-padding:10px;
-z-index: 2;}
+.grow:hover {
+  transform: scale(1.3);
+}
+.social-fb,
+.social-tw,
+.social-gp,
+.social-em,
+.social-rm,
+.social-sk,
+.social-st {
+  color: #606060;
+  padding: 10px;
+  z-index: 2;
+}
 
 .social-fb:hover {
-color: #3B5998;}
+  color: #3b5998;
+}
 .social-tw:hover {
-color: #4099FF;}
+  color: #4099ff;
+}
 .social-gp:hover {
-color: #1D9833;}
+  color: #1d9833;
+}
 .social-em:hover {
-color: #f39c12;}
+  color: #f39c12;
+}
 .social-rm:hover {
-color: #d34836;}
+  color: #d34836;
+}
 .social-sk:hover {
-color: #d36836;}
+  color: #d36836;
+}
 .social-st:hover {
-color: #ec6120;}
-
+  color: #ec6120;
+}
 
 /* Custom Horizontal Rule */
 hr.small {
-    max-width: 100px;
-    margin-bottom:10px;
-    border-top-color:red;
-
+  max-width: 100px;
+  margin-bottom: 10px;
+  border-top-color: red;
 }
 hr.medium {
-    max-width: 300px;
-    margin-bottom: 10px;
-    border-top-color:black;
+  max-width: 300px;
+  margin-bottom: 10px;
+  border-top-color: black;
 }
 
 /*CSS necessary for the affix to work*/
 .affix {
-  top:0px;
+  top: 0px;
   display: inline-block;
 }
 
 #affixeditem > li {
-  display:block;
-  font-size:.75vm;
+  display: block;
+  font-size: 0.75vm;
 }
 
 .wrapper {
-  min-height:106px;
+  min-height: 106px;
 }
 
 #blankwhitespace {
-width:100%;
-background-color:white;
+  width: 100%;
+  background-color: white;
 }
 
-
-
-
-
-#map{
-  position:fixed;
+#map {
+  position: fixed;
   z-index: -1;
-  top:0;
-  bottom:0;
-  width:100%;
-  height:100%;
+  top: 0;
+  bottom: 0;
+  width: 100%;
+  height: 100%;
 }
 
-#mapidheader{
-    position:relative;
-    display:block;
-    z-index: 1;
-  top:0;
-  width:100%;
-  height:200px;
+#mapidheader {
+  position: relative;
+  display: block;
+  z-index: 1;
+  top: 0;
+  width: 100%;
+  height: 200px;
   border-bottom-style: solid;
-  border-color:#606060;
+  border-color: #606060;
 }
 
 #navigation {
-    position: absolute;
-    bottom:0px;
-    z-index:1;
+  position: absolute;
+  bottom: 0px;
+  z-index: 1;
 }
 
 #newcontainer {
-  margin:auto 30px;
+  margin: auto 30px;
 }
 
 li.active {
-  border:solid;
+  border: solid;
   border-bottom: 0px;
 }
 
-#navigationtabs>ul>li>a
-{margin:0px;}
+#navigationtabs > ul > li > a {
+  margin: 0px;
+}
 
-#navigationtabs>ul>li {
-  padding:0px;
+#navigationtabs > ul > li {
+  padding: 0px;
   text-align: center;
 }
 
-
-
-
 #navigationtabs {
-  padding-right:0px;
-  padding-left:0px;
+  padding-right: 0px;
+  padding-left: 0px;
 }
 
 #navigationtabs > ul > li > a > h1 {
-    color:#606060;
-    font-size:3vw;
-
+  color: #606060;
+  font-size: 3vw;
 }
-
 
 #image1 {
-    height:320px;
-    background-image: url("../img/githubpic.jpg");
-    background-repeat: no-repeat;
-    background-size: contain;
-
-
+  height: 320px;
+  background-image: url("../img/githubpic.jpg");
+  background-repeat: no-repeat;
+  background-size: contain;
 }
 
-
 #image2 {
-    height:300px;
-    background-image: url("../img/githubpic.jpg");
-    background-repeat: no-repeat;
-    background-size: contain;
-    border-radius:20px;
-    display: block;
+  height: 300px;
+  background-image: url("../img/githubpic.jpg");
+  background-repeat: no-repeat;
+  background-size: contain;
+  border-radius: 20px;
+  display: block;
 }
 
 #text2 {
-    height:300px;
+  height: 300px;
 }
 
 .biggerfont {
-    font-size: 150%;
+  font-size: 150%;
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 /*This line of code removes the focus on all buttons after a click, whether they are in the body or modal or anywhere*/
 *:focus {
-    outline: none;
+  outline: none;
 }
 
-
-
 /* Custom Button Styles */
-
 
 /*CSS For the worksample image section*/
 
 /* About */
 
 .about {
-    padding: 50px 0;
-    background-color: white;
+  padding: 50px 0;
+  background-color: white;
 }
 
 /* Services */
 
 .services {
-    padding: 50px 0;
-    background-color: gray;
+  padding: 50px 0;
+  background-color: gray;
 }
 
 .service-item {
-    margin-bottom: 30px;
+  margin-bottom: 30px;
 }
 
 /* Callout */
 
-
-
 /* Portfolio */
 
 .portfolio {
-    padding: 50px 0;
+  padding: 50px 0;
 }
 
 .portfolio-item {
-    margin-bottom: 30px;
+  margin-bottom: 30px;
 }
 
 .img-portfolio {
-    margin: 0 auto;
+  margin: 0 auto;
 }
 
 .img-portfolio:hover {
-    opacity: 0.8;
+  opacity: 0.8;
 }
 
-
-.sectioninfo{
-  height:100%;
-  margin:0 0 0 0;
+.sectioninfo {
+  height: 100%;
+  margin: 0 0 0 0;
   /*padding:0px 0 300px 0;*/
-  background-color:white;
+  background-color: white;
 }
 
 .sectiontitle {
@@ -407,219 +421,226 @@ li.active {
 }
 
 .sectioncontent {
-  padding:15px 0 15px 0;
+  padding: 15px 0 15px 0;
 }
 
-#worksamples > [class*=col-] {
+#worksamples > [class*="col-"] {
   /* padding-right:0px;
   padding-left:0px; */
   padding: 10px;
 }
 
-
 /* Custom Button Styles */
 .btn {
-      -webkit-transition: all .3s ease-in-out;
-    -moz-transition: all .3s ease-in-out;
-    transition: all .3s ease-in-out;
+  -webkit-transition: all 0.3s ease-in-out;
+  -moz-transition: all 0.3s ease-in-out;
+  transition: all 0.3s ease-in-out;
 }
 
 .btn-dark {
-    border-radius: 0;
-    color: #fff;
-    background-color: rgba(0,0,0,0.4);
+  border-radius: 0;
+  color: #fff;
+  background-color: rgba(0, 0, 0, 0.4);
 }
 
 .btn-dark:hover,
 .btn-dark:focus,
 .btn-dark:active {
-    color: #fff;
-    background-color: rgba(0,0,0,0.7);
+  color: #fff;
+  background-color: rgba(0, 0, 0, 0.7);
 }
 
 .btn-light {
-    border-radius: 0;
-    color: #333;
-    background-color: rgb(255,255,255);
+  border-radius: 0;
+  color: #333;
+  background-color: rgb(255, 255, 255);
 }
 
 .btn-light:hover,
 .btn-light:focus,
 .btn-light:active {
-    color: #333;
-    background-color: rgba(255,255,255,0.8);
+  color: #333;
+  background-color: rgba(255, 255, 255, 0.8);
 }
 
-
 .portfolio-box {
-    display: block;
-    position: relative;
-    margin: 0 auto;
-    max-width: 650px;
+  display: block;
+  position: relative;
+  margin: 0 auto;
+  max-width: 650px;
 }
 
 .portfolio-box .portfolio-box-caption {
-    display: block;
-    position: absolute;
-    bottom: 0;
-    width: 100%;
-    height: 100%;
-    text-align: center;
-    color: #fff;
-    opacity: 0;
-    background: rgba(240,95,64,.9);
-    -webkit-transition: all .35s;
-    -moz-transition: all .35s;
-    transition: all .35s;
+  display: block;
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  color: #fff;
+  opacity: 0;
+  background: rgba(240, 95, 64, 0.9);
+  -webkit-transition: all 0.35s;
+  -moz-transition: all 0.35s;
+  transition: all 0.35s;
 }
 
 .portfolio-box .portfolio-box-caption .portfolio-box-caption-content {
-    position: absolute;
-    top: 50%;
-    width: 100%;
-    text-align: center;
-    transform: translateY(-50%);
+  position: absolute;
+  top: 50%;
+  width: 100%;
+  text-align: center;
+  transform: translateY(-50%);
 }
 
-.portfolio-box .portfolio-box-caption .portfolio-box-caption-content .project-category,
-.portfolio-box .portfolio-box-caption .portfolio-box-caption-content .project-name {
-    padding: 0 15px;
-    font-family: 'Open Sans','Helvetica Neue',Arial,sans-serif;
+.portfolio-box
+  .portfolio-box-caption
+  .portfolio-box-caption-content
+  .project-category,
+.portfolio-box
+  .portfolio-box-caption
+  .portfolio-box-caption-content
+  .project-name {
+  padding: 0 15px;
+  font-family: "Open Sans", "Helvetica Neue", Arial, sans-serif;
 }
 
-.portfolio-box .portfolio-box-caption .portfolio-box-caption-content .project-category {
-    text-transform: uppercase;
-    font-size: 14px;
-    font-weight: 600;
+.portfolio-box
+  .portfolio-box-caption
+  .portfolio-box-caption-content
+  .project-category {
+  text-transform: uppercase;
+  font-size: 14px;
+  font-weight: 600;
 }
 
-.portfolio-box .portfolio-box-caption .portfolio-box-caption-content .project-name {
-    font-size: 18px;
+.portfolio-box
+  .portfolio-box-caption
+  .portfolio-box-caption-content
+  .project-name {
+  font-size: 18px;
 }
 
 .portfolio-box:hover .portfolio-box-caption {
-    opacity: 1;
+  opacity: 1;
 }
 
-@media(max-width:768px) {
-    .portfolio-box .portfolio-box-caption .portfolio-box-caption-content .project-category {
-        font-size: 2vw;
-    }
+@media (max-width: 768px) {
+  .portfolio-box
+    .portfolio-box-caption
+    .portfolio-box-caption-content
+    .project-category {
+    font-size: 2vw;
+  }
 
-    .portfolio-box .portfolio-box-caption .portfolio-box-caption-content .project-name {
-        font-size: 1.7vw;
-    }
+  .portfolio-box
+    .portfolio-box-caption
+    .portfolio-box-caption-content
+    .project-name {
+    font-size: 1.7vw;
+  }
 
-    #contactinfo {
-        margin: 120px 60px 50px; /*top horizonal bottom */
-        max-width: none;
-      }
+  #contactinfo {
+    margin: 120px 60px 50px; /*top horizonal bottom */
+    max-width: none;
+  }
 
-    #mainnavcontent {
-    padding-top:10px;
-    height:auto;
-    min-height:300px;
-    padding-bottom:10px;
-    margin-bottom:20px;
-}
+  #mainnavcontent {
+    padding-top: 10px;
+    height: auto;
+    min-height: 300px;
+    padding-bottom: 10px;
+    margin-bottom: 20px;
+  }
 
-.portfolio-box-caption-content {
-    
-}
-
+  .portfolio-box-caption-content {
+  }
 } /*end media css rules*/
-
-
 
 /* Side Menu */
 
 #sidebar-wrapper {
-    z-index: 1000;
-    position: fixed;
-    right: 0;
-    width: 250px;
-    height: 100%;
-    margin-right: -250px;
-    overflow-y: auto;
-    background: #222;
-    -webkit-transition: all 0.4s ease 0s;
-    -moz-transition: all 0.4s ease 0s;
-    -ms-transition: all 0.4s ease 0s;
-    -o-transition: all 0.4s ease 0s;
-    transition: all 0.4s ease 0s;
+  z-index: 1000;
+  position: fixed;
+  right: 0;
+  width: 250px;
+  height: 100%;
+  margin-right: -250px;
+  overflow-y: auto;
+  background: #222;
+  -webkit-transition: all 0.4s ease 0s;
+  -moz-transition: all 0.4s ease 0s;
+  -ms-transition: all 0.4s ease 0s;
+  -o-transition: all 0.4s ease 0s;
+  transition: all 0.4s ease 0s;
 }
 
 .sidebar-nav {
-    position: absolute;
-    top: 0;
-    width: 250px;
-    margin: 0;
-    padding: 0;
-    list-style: none;
+  position: absolute;
+  top: 0;
+  width: 250px;
+  margin: 0;
+  padding: 0;
+  list-style: none;
 }
 
 .sidebar-nav li {
-    text-indent: 20px;
-    line-height: 40px;
+  text-indent: 20px;
+  line-height: 40px;
 }
 
 .sidebar-nav li a {
-    display: block;
-    text-decoration: none;
-    color: #999;
+  display: block;
+  text-decoration: none;
+  color: #999;
 }
 
 .sidebar-nav li a:hover {
-    text-decoration: none;
-    color: #fff;
-    background: rgba(255,255,255,0.2);
+  text-decoration: none;
+  color: #fff;
+  background: rgba(255, 255, 255, 0.2);
 }
 
 .sidebar-nav li a:active,
 .sidebar-nav li a:focus {
-    text-decoration: none;
+  text-decoration: none;
 }
 
 .sidebar-nav > .sidebar-brand {
-    height: 55px;
-    font-size: 18px;
-    line-height: 55px;
+  height: 55px;
+  font-size: 18px;
+  line-height: 55px;
 }
 
 .sidebar-nav > .sidebar-brand a {
-    color: #999;
+  color: #999;
 }
 
 .sidebar-nav > .sidebar-brand a:hover {
-    color: #fff;
-    background: none;
+  color: #fff;
+  background: none;
 }
 
 #menu-toggle {
-    z-index: 1;
-    position: fixed;
-    top: 0;
-    right: 0;
+  z-index: 1;
+  position: fixed;
+  top: 0;
+  right: 0;
 }
 
 #sidebar-wrapper.active {
-    right: 250px;
-    width: 250px;
-    -webkit-transition: all 0.4s ease 0s;
-    -moz-transition: all 0.4s ease 0s;
-    -ms-transition: all 0.4s ease 0s;
-    -o-transition: all 0.4s ease 0s;
-    transition: all 0.4s ease 0s;
+  right: 250px;
+  width: 250px;
+  -webkit-transition: all 0.4s ease 0s;
+  -moz-transition: all 0.4s ease 0s;
+  -ms-transition: all 0.4s ease 0s;
+  -o-transition: all 0.4s ease 0s;
+  transition: all 0.4s ease 0s;
 }
 
 .toggle {
-    margin: 5px 5px 0 0;
+  margin: 5px 5px 0 0;
 }
-
-
-
-
-
 
 .projectsgroup {
   margin-top: 150px;
@@ -627,18 +648,17 @@ li.active {
 }
 
 .projects {
-  padding:30px 0px 30px 0px;
+  padding: 30px 0px 30px 0px;
   margin: 10px 0 10px 0;
   background-color: white;
   border-width: 1px;
   border-style: solid;
-  border-color:#505050;
+  border-color: #505050;
   overflow: hidden;
   position: relative;
 }
 
 .projects h4 {
   padding: 0px;
-  margin:0px;
+  margin: 0px;
 }
-
